--- a/Miembros del Grupo.html
+++ b/Miembros del Grupo.html
@@ -5,31 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BTS: El grupo de KPOP que lo está petando</title>
+    <title>Miembros del Grupo BTS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body id="tipo">
-<h1>BTS: EL GRUPO DE KPOP QUE LO ESTÁ PETANDO</h1>
-<hr>
-<hr>
-    <div clasiv class="container">
-        <div class="row">
-            <div class="col-lg-4"><img src="img/foto1.jpg" width= 110%></div>
-            <div class="col-lg-4" class="Índice">
-                <h2>    ----  Índice  ----</h2>
-                <p><a href="./Introducción.html">Introducción </a></p>
-                <p><a href="./Miembros del Grupo.html">Miembros del Grupo</a></p>
-                <p><a href="./Música.html">Música</a></p>
-                <p><a href="./Premios.html">Premios</a></p> 
-                <p><a href="./Giras.html">Giras</a></p>
-                <p><a href="./TV y RRSS.html">Televisión y redes Sociales</a></p>
-            </div>
-            <div class="col-lg-4"><img src="img/foto2.webp" width=115%></div>
-        </div>
-    </div>
+<h1> MIEMBROS DEL GRUPO</h1>
      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-     <script type="application/javascript" src="js/functions.js"></script>
+     <script type="application/javascript" src="js/functions2.js"></script>
 </body>
 </html>
