--- a/Introducción.html
+++ b/Introducción.html
@@ -10,6 +10,15 @@
 </head>
 <body id="tipo">
 <h1> INTRODUCCIÓN</h1>
+<hr>
+<hr>
+<p>BTS es una boyband surcoreana formada por Big Hit Entertainment (un sello discográfico).El grupo debutó en el año 2013 con la canción "No More Dream", que está incluida en su primer sencillo 2 Cool 4 School.Como todas las bandas, al principio su éxito fue moderado y fue ganando fama, tanto que ya en su primer año como banda empezaron a ganar premios reconocidos.</p>
+<p>El nombre de la banda, BTS, proviene de la expresión coreana Bangtan Sonyeondan que significa "Boy scouts a prueba de balas". Esto, según uno de los miembros del grupo, el nombre del grupo hace referencia al deseo de edejar los esteriotipos, críticas y expectativas dirigidas como balas hacia los jóvenes</p>
+<br>
+<hr>
+<hr>
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rBG5L7UsUxA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Este es el video de la canción con la que debutaron.</iframe>
      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
