--- a/Música.html
+++ b/Música.html
@@ -10,6 +10,70 @@
 </head>
 <body id="tipo">
 <h1> MÚSICA</h1>
+<hr>
+<hr>
+<p>BTS, a lo largo de su carrera musical, ha sacado diversos discos donde demuestra su seriedad como grupo musical y su talento propio y único. Este, ha sido reconocido ya en muchos países y cada vez va a más. Su número de fans no para de incrementar y este año vuelve a estar entre las cien personas más influyentes del mundo según la revista Time. También, ha logrado ser el primer grupo después de los Beatles en conseguir que tres de sus discos sean el número 1 del top ventas en menos de un año.</p>
+<br>
+<div class="container">
+    <div class="row">
+      <div class="col-lg-6 nombres">
+          <p id="Países">Corea del Sur</p>
+          <div>
+              <p>Álbumes de estudio:</p>
+              <ul>
+                  <li>Dark & Wild (2014)</li>
+                  <li>Wings (2016)</li>
+                  <li>Love Yourself: Tear(2018)</li>
+              </ul>
+              <p>Reediciones:</p>
+              <ul>
+                  <li>Wings: You Never Walk Alone</li>
+              </ul>
+              <p>EPs:</p>
+              <ul>
+                  <li>O!RUL8,2?(2013)</li>
+                  <li>Skool Luv Affair(014)</li>
+                  <li>The Most Beautiful Moment in Life, Part 1(2015)</li>
+                  <li>The Most Beautiful Moment in Life, Part 2(2015)</li>
+                  <li>Love Yourself: Her(2017)</li>
+                  <li>Map of the Soul: Persona(2019)</li>
+              </ul>
+              <p>Álbumes recopilatorios:</p>
+              <ul>
+                  <li>The Most Beautiful Moment in Life: Young Forever(2016)</li>
+                  <li>The Best of BTS: Korea Edition(2017)</li>
+                  <li>Love Yourself: Answer(2018)</li>
+              </ul>
+          </div>
+         </div>
+      <div class="col-lg-6 nombres">
+          <p id="Países">Japón</p>
+         <div>
+              <p>Álbumes de estudio:</p>
+              <ul>
+                  <li>Wake Up(2014)</li>
+                  <li>Youth(2016)</li>
+                  <li>Face Yourself(2018)</li>
+              </ul>
+              <p>Álbumes recopilatorios:</p>
+              <ul>
+                  <li>2 Cool 4 Skool/O!RUL8,2?(2014)</li>
+                  <li>The Best os BTS: Japan Edition(2017)</li>
+              </ul>
+              <div class="container">
+                    <div class="row">
+                      <div class="col-lg-6 nombres">
+                         <img src="img/bts-answer-00.jpg" width="100%">
+                      </div>
+                      <div class="col-lg-6 nombres">
+                         <img src="img/bts_fake-love-rocking-vibe-mix.jpg" width="100%">
+                      </div>
+                    </div>
+                </div>
+          </div>
+      </div>
+   </div>
+</div>
      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
