--- a/Premios.html
+++ b/Premios.html
@@ -10,6 +10,24 @@
 </head>
 <body id="tipo">
 <h1> PREMIOS</h1>
+<hr>
+<hr>
+<p>Desde su debut en 2013 han sido nominados a un total de 355 premios de los cuales han ganado 241. En 2019, gracias a su colaboración con Halsey, "Boy With Luv", han ganado 21 premios de 4 programas  distintos en tan solo 3 meses. </p>
+<div class="nombres">
+    <ul><p id="Países">Algunos de los premios más importantes que han ganado son:</p>
+       <li>Gaon Chart K-pop Awards (5)</li>
+       <li>Golden Disk Awards (5)</li>
+       <li>MelOn Music Awards (4)</li>
+       <li>Mnet Asian Music Awards (3)</li>
+       <li>Seoul Music Awards (7)</li>
+    </ul>
+   <hr>
+   <p>Aquí podéis ver el momento en el que BTS gana uno de estos premios, Artist of the Year en los MAMA Music Awards (2018)</p>
+   <div clasiv class="container">
+        <div class="row">
+            <div class="col-lg-6"> <iframe width="560" height="315" src="https://www.youtube.com/embed/5X2M0zzi-Rs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="col-lg-6"><img src="img/premios buena.jpeg" width="100%"></div>
+</div>
      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
