--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
             <div class="col-lg-4"><img src="img/foto1.jpg" width= 110%></div>
             <div class="col-lg-4" class="Índice">
                 <h2>    ----  Índice  ----</h2>
-                <p><a href="./Introducción.html">Introducción </a></p>
-                <p><a href="./Miembros del Grupo.html">Miembros del Grupo</a></p>
-                <p><a href="./Música.html">Música</a></p>
-                <p><a href="./Premios.html">Premios</a></p> 
-                <p><a href="./Giras.html">Giras</a></p>
-                <p><a href="./TV y RRSS.html">Televisión y redes Sociales</a></p>
+                <p><a target="_blank" href="./Introducción.html">Introducción </a></p>
+                <p><a target="_blank" href="./Miembros del Grupo.html">Miembros del Grupo</a></p>
+                <p><a target="_blank" href="./Música.html">Música</a></p>
+                <p><a target="_blank" href="./Premios.html">Premios</a></p> 
+                <p><a target="_blank" href="./Giras.html">Giras</a></p>
             </div>
             <div class="col-lg-4"><img src="img/foto2.webp" width=115%></div>
         </div>
