--- a/Giras.html
+++ b/Giras.html
@@ -12,9 +12,31 @@
 <h1> GIRAS</h1>
 <hr>
 <hr>
-<p>Como toda banda, BTS se ha ido de gira en muchas ocasiones.</p>
-<div>
-    <p></p>
+<p id="Países" class="nombres">Estas son las giras que han hecho hasta ahora:</p>
+<div clasiv class="container">
+    <div class="row">
+        <div class="col-lg-6 nombres">
+            <ul>
+                <li>BTS Live Trilogy. Episode II: The Red Bullet (2014-2015)</li>
+                <li>First Japan Tour Wake Up: Open Your Eyes (2015</li>
+                <li>Highlight Tour (2015)</li>
+                <li>2015 BTS Live The Most Beautiful Moment in Life On Stage (2015-2016)</li>
+                <li>2016 BTS Live The Most Beautiful Moment in Life On Stage: Epilogue (2016)</li>
+                <li>2017 BTS Live Trilogy. Episode III: The Wings Tour (2017)</li>
+                <li>2018 BTS World Tour: Love Yourself (2018-2019)</li>
+                <li>BTS World Tour Love Yourself: Speak Yourself (2019)</li>
+            </ul>
+        </div> 
+        <div class="col-lg-6"><img src="img/concierto3.jpg" width="80%"></div>   
+    </div>
+</div>
+<br>
+<br>
+<div clasiv class="container">
+        <div class="row">
+            <div class="col-lg-6"> <img src="img/concierto1.jpg" width="90%"></div>
+            <div class="col-lg-6"><img src="img/concierto2.jpg" width="90%"></div>
+        </div>
 </div>
      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
