--- a/Miembros del Grupo.html
+++ b/Miembros del Grupo.html
@@ -12,10 +12,10 @@
 <h1> MIEMBROS DEL GRUPO</h1>
 <hr>
 <hr>
-<h3 class="siete">BTS está compuesto por 7 integrantes, estos son:</h3>
+<h3 id="Países" class="nombres">BTS está compuesto por 7 integrantes, estos son:</h3>
 <br>
 <div class= "nombres">
-    <ol>
+    <ul>
       <li>Nombre real: Kim Nam-joon; Nombre artístico: RM </li>
       <li>Nombre real: Kim Seok-jin; Nombre artístico: Jin</li>
       <li>Nombre real: Min Yoon-g; Nombre artístico: Suga</li>
@@ -23,23 +23,29 @@
       <li>Nombre real: Park Ji-ming; Nombre artístico: Jimin</li>
       <li>Nombre real:Kim Tae-hyung ; Nombre artístico: V</li>
       <li>Nombre real: Jeon Jung-kook; Nombre artístico: Jungkook</li>
-    </ol>
+    </ul>
 </div>
 <br>
+<hr>
+<hr>
+<br>
+<br>
 <div clasiv class="container">
-        <div class="row">
-            <div class="col-lg-4"><img src="img/RM.jpg" width="70%" >1 </div>
-            <div class="col-lg-4"><img src="img/Jin.jpg" width="60%">2</div>
-            <div class="col-lg-4"><img src="img/Suga.jpg" width="55%" >3</div>
+        <div class="row miembros">
+            <div class="col-lg-4"><img src="img/RM2.jpg" width="60%" > </div>
+            <div class="col-lg-4"><img src="img/JIN2.jpg" width="60%"></div>
+            <div class="col-lg-4"><img src="img/SUGA3.jpg" width="60%" ></div>
         </div>
 </div>
 <br>
+<br>
+<br>
 <div clasiv class="container">
-        <div class="row">
-            <div class="col-lg-3"><img src="img/j-hope.png" width="60%" >4</div>
-            <div class="col-lg-3"><img src="img/jimin.jpg" width="60%">5</div>
-            <div class="col-lg-3"><img src="img/V BTS.jpg" width="60%">6</div>
-            <div class="col-lg-3"><img src="img/jingcook.jpg" width="60%">7</div>
+        <div class="row miembros">
+            <div class="col-lg-3"><img src="img/j-hope.png" width="90%" ></div>
+            <div class="col-lg-3"><img src="img/jimin.jpg" width="90%"></div>
+            <div class="col-lg-3"><img src="img/V BTS.jpg" width="90%"></div>
+            <div class="col-lg-3"><img src="img/jingcook.jpg" width="90%"></div>
         </div>
     </div>
      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
