--- a/Premios.html
+++ b/Premios.html
@@ -26,7 +26,8 @@
    <div clasiv class="container">
         <div class="row">
             <div class="col-lg-6"> <iframe width="560" height="315" src="https://www.youtube.com/embed/5X2M0zzi-Rs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-            <div class="col-lg-6"><img src="img/premios buena.jpeg" width="100%"></div>
+            <div class="col-lg-6"><img src="img/premios buena.jpeg" width="100%">
+        </div>
 </div>
      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
